[gd_scene load_steps=13 format=3 uid="uid://cpegytyd2mch0"]

[ext_resource type="Script" path="res://entities/weapon/LaserLine.gd" id="1_05g12"]
[ext_resource type="Texture2D" uid="uid://ybgjijlyjr2j" path="res://assets/vfx/glowing_circle.png" id="2_yyt7v"]

[sub_resource type="Gradient" id="Gradient_0ere0"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sgd4w"]
gradient = SubResource("Gradient_0ere0")

[sub_resource type="Curve" id="Curve_wd7q4"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_drtkf"]
curve = SubResource("Curve_wd7q4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nphyq"]
lifetime_randomness = 0.3
particle_flag_disable_z = true
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
initial_velocity_min = 150.0
initial_velocity_max = 150.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_drtkf")
color = Color(0.713726, 1, 0.698039, 1)
color_ramp = SubResource("GradientTexture1D_sgd4w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nbfse"]
lifetime_randomness = 0.3
particle_flag_disable_z = true
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_drtkf")
color = Color(0.713726, 1, 0.698039, 1)
color_ramp = SubResource("GradientTexture1D_sgd4w")

[sub_resource type="Curve" id="Curve_vwjs7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.998308, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1nuqr"]
curve = SubResource("Curve_vwjs7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x624v"]
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
tangential_accel_min = 100.0
tangential_accel_max = 100.0
scale_curve = SubResource("CurveTexture_1nuqr")

[sub_resource type="Environment" id="Environment_gq2jw"]
background_mode = 3
glow_enabled = true
glow_levels/3 = 2.0
glow_levels/4 = 0.5
glow_levels/6 = 0.1
glow_intensity = 0.5
glow_strength = 1.45
glow_bloom = 0.05
glow_blend_mode = 0
glow_hdr_threshold = 0.8
glow_hdr_luminance_cap = 2.0

[node name="LaserLine" type="RayCast2D"]
target_position = Vector2(100000, 2.08165e-12)
script = ExtResource("1_05g12")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 100, 2.08165e-12)
default_color = Color(0.721569, 1, 0.803922, 1)

[node name="CastingParticle" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_nphyq")
texture = ExtResource("2_yyt7v")
lifetime = 0.3

[node name="ImpactParticle" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_nbfse")
texture = ExtResource("2_yyt7v")
lifetime = 0.3

[node name="BeamParticle" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_x624v")
texture = ExtResource("2_yyt7v")
lifetime = 0.3
visibility_rect = Rect2(-1, -1, 2, 10)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gq2jw")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
